k8s/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    # /employee/1 -> employee recebe /1 (o prefixo e removido)
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: gateway
      port:
        number: 8080
  rules:
    - host: microservices-cluster.info
      http:
        paths:
          - path: /employee(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: employee
                port:
                  number: 8080
          - path: /department(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: department
                port:
                  number: 8080
          - path: /organization(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: organization
                port:
                  number: 8080
          - path: /gateway(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 8080
